--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,11 @@
     <string name="buttonstartpause">ButtonStartPause</string>
     <string name="toast_message_started">Timer Started</string>
     <string name="toast_message_paused">Timer Paused</string>
-    <string name="set_timer">00:00:00</string>
+
+    <!--FormatMillisIntoTimer-->
+    <string name="set_timer">%1$s:%2$s:%3$s</string>
+    <string name="set_time_dhm">%1$sd%2$sh%3$sm</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
