--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PunchClockMockup2</string>
+    <string name="app_name">SimpleTimeKeeper</string>
     <string name="start">Start</string>
     <string name="menu">Menu</string>
     <string name="list">List</string>
